edev-alibaba-trade-gateway/edev-alibaba-trade-gateway.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: edev-alibaba-trade-gateway
  name: edev-alibaba-trade-gateway 
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edev-alibaba-trade-gateway
  template:
    metadata:
      name: edev-alibaba-trade-gateway
      labels:
        app: edev-alibaba-trade-gateway
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                        - edev-alibaba-trade-gateway
                topologyKey: "kubernetes.io/hostname"
      containers:
      - name: edev-alibaba-trade-gateway
        image: repository:5000/edev-alibaba-trade-gateway:<VERSION>
        imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: edev-alibaba-trade-gateway
  name: edev-alibaba-trade-gateway
  namespace: default
spec:
  ports:
  - port: 9009
    targetPort: 9009
  selector:
    app: edev-alibaba-trade-gateway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-edev-alibaba
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: trade
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edev-alibaba-trade-gateway
                port:
                  number: 80
